# dbt_semantic_layer

./: .gitignore  dbt_project.yml  pyproject.toml
dbt-semantic-layer/: dbt_project.yml
models/metrics/: fct_orders.yml
